Added skip links

--- a/blogs/css-grids.html
+++ b/blogs/css-grids.html
@@ -16,7 +16,9 @@
 </head>
 
 <body>
-
+<!-- Skip Links -->
+<a href="#main">Skip nav to main content</a>
+<!-- End Skip Links -->
     <header>
         <div class="trigger trigger--sub">
             <button class="hamburger hamburger--spring" type="button">
@@ -39,7 +41,7 @@
         </nav>
     </header>
 
-    <main>
+    <main id="main">
         <div class="wrapper">
             <article>
                 <h1>CSS Grids</h1>
@@ -72,7 +74,7 @@
                 </p>
 
                 <h3>How</h3>
-                <p>As CSS Grids is only just emerging in modern web browsers, it was relatively hard to find tutorials and resources to learn about how it works. Luckily, I follow a well know key figure in the industry on Twitter, <a href="https://twitter.com/rachelandrew">Rachel Andrew</a>. Rachel had posted a link to a useful website which she had created, dedicated for beginners interested in learning CSS Grids and the syntax. I decided to document my learning on CodePen as it was easy to create an initial pen and to make various iterations of that pen as my learning developed.</p>
+                <p>As CSS Grids is only just emerging in modern web browsers, it was relatively hard to find tutorials and resources to learn about how it works. Luckily, I follow a well know key figure in the industry on Twitter, <a href="https://twitter.com/rachelandrew">Rachel Andrew</a>. Rachel had posted a link to a useful website which she had created, dedicated for beginners interested in learning CSS Grids and the syntax. The website is <a href="http://gridbyexample.com">Grid by Example</a>. I decided to document my learning on CodePen as it was easy to create an initial pen and to make various iterations of that pen as my learning developed.</p>
 
                 <h4>First Iteration</h4>
                 <p>For the first pen, a simple grid was created using six div elements within a wrapper which had the display:grid; property added to it. Within the wrapper, three columns and rows had been created. The code for the columns and rows were: 100px 100px 100px. This means that rows have a height of 100px and the columns have a width of 100px, which is repeated three times.  As this grid uses a defined set width of the columns, this makes it unresponsive.</p>
@@ -107,6 +109,25 @@
                     Available at: https://rachelandrew.co.uk/archives/2016/03/30/should-i-use-grid-or-flexbox/
                     [Accessed 27 February 2017].
 
+                </p>
+                <p>Andrew, R., No Date. <i>Grid by Example.</i> [Online] 
+                Available at: http://gridbyexample.com
+                [Accessed 10 March 2017].
+                </p>
+                <p>Bootstrap, No Date. <i>Bootstrap · The world's most popular mobile-first and responsive front-end framework.</i> [Online] 
+                Available at: http://getbootstrap.com
+                [Accessed 10 March 2017].</p>
+                <p>CodePen, No Date. <i>CodePen.</i> [Online] 
+                Available at: http://codepen.io
+                [Accessed 10 March 2017].
+                </p>
+                <p>Coyier, C., 2017. <i>A Complete Guide to Flexbox.</i> [Online] 
+                Available at: https://css-tricks.com/snippets/css/a-guide-to-flexbox/
+                [Accessed 10 March 2017].
+                </p>
+                <p>Zurb, No Date. <i>Foundation The most advanced responsive front-end framework in the world.</i> [Online] 
+                Available at: http://foundation.zurb.com
+                [Accessed 10 March 2017].
                 </p>
 
                 <button onclick="window.history.go(-1)" class="btn--back">Go back</button>
