--- a/blogs/portfolio-development.html
+++ b/blogs/portfolio-development.html
@@ -16,7 +16,9 @@
 </head>
 
 <body>
-
+<!-- Skip Links -->
+<a href="#main">Skip nav to main content</a>
+<!-- End Skip Links -->
     <header>
         <div class="trigger trigger--sub">
             <button class="hamburger hamburger--spring" type="button">
@@ -39,7 +41,7 @@
         </nav>
     </header>
 
-    <main>
+    <main id="main">
         <div class="wrapper">
             <article>
                 <h1>Portfolio Development</h1>
