--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,9 @@
   <title>Contact me &ndash; Patrick Whitehouse</title>
 </head>
 <body>
-
+<!-- Skip Links -->
+<a href="#main">Skip nav to main content</a>
+<!-- End Skip Links -->
 <header>
   <div class="trigger trigger--sub">
     <button class="hamburger hamburger--spring" type="button">
@@ -37,7 +39,7 @@
   </nav>
 </header>
 
-  <main>
+  <main id="main">
     <section>
       <div class="wrapper">
         <h1>Contact Me</h1>
