--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
   <title>Patrick Whitehouse – Front end developer from Manchester</title>
 </head>
 <body>
+
+<!-- Skip Links -->
+<a href="#main" class="skiplink">Skip nav to main content</a>
+<!-- End Skip Links -->
   <header>
     <div class="trigger">
       <button class="hamburger hamburger--spring" type="button">
@@ -36,7 +40,7 @@
     </nav>
   </header>
 
-  <main>
+  <main id="main">
   <section class="hero">
       <h1>Patrick Whitehouse</h1>
       <p>Student &ndash; Web Enthusiast &ndash; Car Fanatic</p>
